--- a/views/main.ejs
+++ b/views/main.ejs
@@ -82,6 +82,7 @@
 	</nav>
 	<div id='body'>
 		View Projects: <button class='btn' style='height: 50px'>View</button>
+		<br><button class='btn' style="width: 300px" onclick='javascript:location="/readme"'><b>BetaIDE</b> Information</button><br>
 		<script>
 			const user = document.querySelector('#content').innerText;
 			document.querySelector('#content').remove();
